--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: base_dialog_plugin
 description: "A new Flutter plugin project."
 version: 0.0.1
-homepage:
+homepage: https://github.com/RatanakvisalDuong/based_dialog_plugin
 
 environment:
   sdk: ^3.7.0
