fixed pubspec yaml file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: base_dialog_plugin
-description: "A new Flutter plugin project."
+description: "A new plugin for platform based dialog"
 version: 0.0.1
 homepage: https://github.com/RatanakvisalDuong/based_dialog_plugin
 
